--- a/clientes.html
+++ b/clientes.html
@@ -40,6 +40,19 @@
               <a class="nav-link" href="expedientes.html">Expedientes</a>
             </li>
           </ul>
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="#">Nombre</a>
+            </li>
+            <li class="nav-item d-flex align-items-center">
+              <img
+                src="img/login_pic.png"
+                alt=""
+                class="rounded img-fluid me-2"
+                style="max-width: 28px; height: 28px"
+              />
+            </li>
+          </ul>
         </div>
       </div>
     </nav>
@@ -58,16 +71,104 @@
         </thead>
         <tbody>
           <tr>
-            <td><a href="#">Cliente 1</a></td>
+            <td><a href="cliente_view.html">Cliente 1</a></td>
             <td>+52 123-456-7890</td>
-            <td><button class="btn btn-secondary">Modificar</button></td>
-            <td><button class="btn btn-danger">Eliminar</button></td>
+            <td>
+              <button
+                class="btn btn-secondary"
+                onclick="window.location.replace('modificar_cliente.html');"
+              >
+                Modificar
+              </button>
+            </td>
+            <td>
+              <button
+                class="btn btn-danger"
+                onclick="window.location.replace('eliminar.html');"
+              >
+                Eliminar
+              </button>
+            </td>
           </tr>
           <tr>
-            <td><a href="#">Cliente 2</a></td>
+            <td><a href="cliente_view.html">Cliente 2</a></td>
             <td>+52 123-456-7890</td>
-            <td><button class="btn btn-secondary">Modificar</button></td>
-            <td><button class="btn btn-danger">Eliminar</button></td>
+            <td>
+              <button
+                class="btn btn-secondary"
+                onclick="window.location.replace('modificar_cliente.html');"
+              >
+                Modificar
+              </button>
+            </td>
+            <td>
+              <button
+                class="btn btn-danger"
+                onclick="window.location.replace('eliminar.html');"
+              >
+                Eliminar
+              </button>
+            </td>
+          </tr>
+          <tr>
+            <td><a href="cliente_view.html">Cliente 3</a></td>
+            <td>+52 123-456-7890</td>
+            <td>
+              <button
+                class="btn btn-secondary"
+                onclick="window.location.replace('modificar_cliente.html');"
+              >
+                Modificar
+              </button>
+            </td>
+            <td>
+              <button
+                class="btn btn-danger"
+                onclick="window.location.replace('eliminar.html');"
+              >
+                Eliminar
+              </button>
+            </td>
+          </tr>
+          <tr>
+            <td><a href="cliente_view.html">Cliente 4</a></td>
+            <td>+52 123-456-7890</td>
+            <td>
+              <button
+                class="btn btn-secondary"
+                onclick="window.location.replace('modificar_cliente.html');"
+              >
+                Modificar
+              </button>
+            </td>
+            <td>
+              <button
+                class="btn btn-danger"
+                onclick="window.location.replace('eliminar.html');"
+              >
+                Eliminar
+              </button>
+            </td>
+          </tr>
+          <tr>
+            <td><a href="cliente_view.html">Cliente 5</a></td>
+            <td>+52 123-456-7890</td>
+            <td>
+              <button
+                class="btn btn-secondary"
+                onclick="window.location.replace('modificar_cliente.html');"
+              >
+                Modificar
+              </button>
+            </td>
+            <td>
+              <button
+                class="btn btn-danger"
+                onclick="window.location.replace('eliminar.html');"
+              >
+                Eliminar
+              </button>
+            </td>
           </tr>
         </tbody>
       </table>
