--- a/expedientes.html
+++ b/expedientes.html
@@ -48,6 +48,19 @@
               <a class="nav-link active" href="expedientes.html">Expedientes</a>
             </li>
           </ul>
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="#">Nombre</a>
+            </li>
+            <li class="nav-item d-flex align-items-center">
+              <img
+                src="img/login_pic.png"
+                alt=""
+                class="rounded img-fluid me-2"
+                style="max-width: 28px; height: 28px"
+              />
+            </li>
+          </ul>
         </div>
       </div>
     </nav>
@@ -65,14 +78,118 @@
         </thead>
         <tbody>
           <tr>
-            <td><a href="#">Expediente 1</a></td>
-            <td><button class="btn btn-secondary">Modificar</button></td>
-            <td><button class="btn btn-danger">Eliminar</button></td>
+            <td><a href="expediente_view.html">Expediente 1</a></td>
+            <td>
+              <button
+                class="btn btn-secondary"
+                onclick="window.location.replace('modificar_expediente.html');"
+              >
+                Modificar
+              </button>
+            </td>
+            <td>
+              <button
+                class="btn btn-danger"
+                onclick="window.location.replace('eliminar.html');"
+              >
+                Eliminar
+              </button>
+            </td>
           </tr>
           <tr>
-            <td><a href="#">Expediente 2</a></td>
-            <td><button class="btn btn-secondary">Modificar</button></td>
-            <td><button class="btn btn-danger">Eliminar</button></td>
+            <td><a href="expediente_view.html">Expediente 2</a></td>
+            <td>
+              <button
+                class="btn btn-secondary"
+                onclick="window.location.replace('modificar_expediente.html');"
+              >
+                Modificar
+              </button>
+            </td>
+            <td>
+              <button
+                class="btn btn-danger"
+                onclick="window.location.replace('eliminar.html');"
+              >
+                Eliminar
+              </button>
+            </td>
+          </tr>
+          <tr>
+            <td><a href="expediente_view.html">Expediente 3</a></td>
+            <td>
+              <button
+                class="btn btn-secondary"
+                onclick="window.location.replace('modificar_expediente.html');"
+              >
+                Modificar
+              </button>
+            </td>
+            <td>
+              <button
+                class="btn btn-danger"
+                onclick="window.location.replace('eliminar.html');"
+              >
+                Eliminar
+              </button>
+            </td>
+          </tr>
+          <tr>
+            <td><a href="expediente_view.html">Expediente 4</a></td>
+            <td>
+              <button
+                class="btn btn-secondary"
+                onclick="window.location.replace('modificar_expediente.html');"
+              >
+                Modificar
+              </button>
+            </td>
+            <td>
+              <button
+                class="btn btn-danger"
+                onclick="window.location.replace('eliminar.html');"
+              >
+                Eliminar
+              </button>
+            </td>
+          </tr>
+          <tr>
+            <td><a href="expediente_view.html">Expediente 5</a></td>
+            <td>
+              <button
+                class="btn btn-secondary"
+                onclick="window.location.replace('modificar_expediente.html');"
+              >
+                Modificar
+              </button>
+            </td>
+            <td>
+              <button
+                class="btn btn-danger"
+                onclick="window.location.replace('eliminar.html');"
+              >
+                Eliminar
+              </button>
+            </td>
+          </tr>
+          <tr>
+            <td><a href="expediente_view.html">Expediente 6</a></td>
+            <td>
+              <button
+                class="btn btn-secondary"
+                onclick="window.location.replace('modificar_expediente.html');"
+              >
+                Modificar
+              </button>
+            </td>
+            <td>
+              <button
+                class="btn btn-danger"
+                onclick="window.location.replace('eliminar.html');"
+              >
+                Eliminar
+              </button>
+            </td>
           </tr>
         </tbody>
       </table>
