--- a/index.html
+++ b/index.html
@@ -48,8 +48,147 @@
               <a class="nav-link" href="expedientes.html">Expedientes</a>
             </li>
           </ul>
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="#">Nombre</a>
+            </li>
+            <li class="nav-item d-flex align-items-center">
+              <img
+                src="img/login_pic.png"
+                alt=""
+                class="rounded img-fluid me-2"
+                style="max-width: 28px; height: 28px"
+              />
+            </li>
+          </ul>
         </div>
       </div>
     </nav>
+    <div class="container mt-3">
+      <div class="row">
+        <div class="col-lg-8">
+          <p class="h3">Clientes</p>
+          <table class="table table-hover">
+            <thead>
+              <tr>
+                <th scope="col">Clientes</th>
+                <th scope="col">Teléfono</th>
+                <th scope="col">Modificar</th>
+                <th scope="col">Eliminar</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td><a href="cliente_view.html">Cliente 1</a></td>
+                <td>+52 123-456-7890</td>
+                <td>
+                  <button
+                    class="btn btn-secondary"
+                    onclick="window.location.replace('modificar_cliente.html');"
+                  >
+                    Modificar
+                  </button>
+                </td>
+                <td>
+                  <button
+                    class="btn btn-danger"
+                    onclick="window.location.replace('eliminar.html');"
+                  >
+                    Eliminar
+                  </button>
+                </td>
+              </tr>
+              <tr>
+                <td><a href="cliente_view.html">Cliente 2</a></td>
+                <td>+52 123-456-7890</td>
+                <td>
+                  <button
+                    class="btn btn-secondary"
+                    onclick="window.location.replace('modificar_cliente.html');"
+                  >
+                    Modificar
+                  </button>
+                </td>
+                <td>
+                  <button
+                    class="btn btn-danger"
+                    onclick="window.location.replace('eliminar.html');"
+                  >
+                    Eliminar
+                  </button>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+          <p class="h3">Expedientes</p>
+          <table class="table table-hover">
+            <thead>
+              <tr>
+                <th scope="col">Expedientes</th>
+                <th scope="col">Modificar</th>
+                <th scope="col">Eliminar</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td><a href="expediente_view.html">Expediente 1</a></td>
+                <td>
+                  <button
+                    class="btn btn-secondary"
+                    onclick="window.location.replace('modificar_expediente.html');"
+                  >
+                    Modificar
+                  </button>
+                </td>
+                <td>
+                  <button
+                    class="btn btn-danger"
+                    onclick="window.location.replace('eliminar.html');"
+                  >
+                    Eliminar
+                  </button>
+                </td>
+              </tr>
+              <tr>
+                <td><a href="expediente_view.html">Expediente 2</a></td>
+                <td>
+                  <button
+                    class="btn btn-secondary"
+                    onclick="window.location.replace('modificar_expediente.html');"
+                  >
+                    Modificar
+                  </button>
+                </td>
+                <td>
+                  <button
+                    class="btn btn-danger"
+                    onclick="window.location.replace('eliminar.html');"
+                  >
+                    Eliminar
+                  </button>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <div class="col-lg-4">
+          <iframe
+            src="https://calendar.google.com/calendar/embed?height=300&wkst=1&bgcolor=%23ffffff&ctz=America%2FMexico_City&hl=es_419&showTitle=0&showTabs=0&showPrint=0&showTz=0&showDate=1&src=ZXMubWV4aWNhbiNob2xpZGF5QGdyb3VwLnYuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&color=%230B8043"
+            style="border-width: 0"
+            width="300"
+            height="300"
+            frameborder="0"
+            scrolling="no"
+          ></iframe>
+          <p class="h3 mt-3">Agenda</p>
+          <ul class="list-group">
+            <li class="list-group-item">Evento 1</li>
+            <li class="list-group-item">Evento 2</li>
+            <li class="list-group-item">Evento 3</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="container"></div>
   </body>
 </html>
