Cambios menores a atributos
Cambios a atributos como el nombre de clases y otros cambios menores

--- a/login.html
+++ b/login.html
@@ -14,21 +14,18 @@
       <form class="input_box" method="post">
         <input
           type="text"
-          class="form-control correo"
+          class="correo"
           id="login_email"
           name="login_email"
           placeholder="Correo"
         />
         <input
           type="password"
-          class="form-control"
           id="login_pass"
           name="login_pass"
           placeholder="Contraseña"
         />
-        <button type="button" id="button_acceder" class="acceder">
-          Acceder
-        </button>
+        <button type="button" id="button_acceder" class="btn">Acceder</button>
         <p class="olvido">
           Olvido su contraseña?
           <a href="login_change.html" class="cambiar"
