Small changes to login pages

--- a/login.html
+++ b/login.html
@@ -27,7 +27,7 @@
         />
         <button type="button" id="button_acceder" class="btn">Acceder</button>
         <p class="olvido">
-          Olvido su contraseña?
+          Olvidó su contraseña?
           <a href="login_change.html" class="cambiar"
             ><b>Cambiar contraseña</b></a
           >
