Testing pagina clientes

--- a/index_2.html
+++ b/index_2.html
@@ -14,7 +14,7 @@
           <li class="dashboard">
             <a href="#">Dashboard</a>
           </li>
-          <li class="nav-item hide"><a href="#">Clientes</a></li>
+          <li class="nav-item hide"><a href="clientes_2.html">Clientes</a></li>
           <li class="nav-item hide"><a href="#">Expedientes</a></li>
           <li class="nav-item nav-right hide"><a href="#">Cuenta</a></li>
           <li class="nav-button">
